src/test/deca/codegen/valid/UnFoisInitF.deca
// Description:
//    tests simple multiplication
//
// Resultats:
//
//
// Historique:
//    cree le 21/01/2017
{
float x = 1.0;
print(1*x);
}
